Fix Close link collapse media query

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,7 +35,7 @@ i.right { margin-left: 5px; margin-right: -10px; }
 .modal .modal-links a { margin-bottom: 0; }
 
 .play-sm { display: none; }
-@media(max-width: 360px) { .play-sm { display: inline-block; } .play-lg { display: none; } }
+@media(max-width: 356px) { .play-sm { display: inline-block; } .play-lg { display: none; } }
 
 /* Helper Classes
 ========================================================================== */
